<?xml version="1.0"?>
<package format="2">
  <name>sample_openhrp3_model</name>
  <version>0.0.0</version>
  <description>The sample_openhrp3_model package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>openhrp3</depend>
  <depend>rtmbuild</depend>
  <depend>openrtm_tools</depend>

</package>
