<?xml version="1.0"?>
<package format="2">
  <name>sample_ec</name>
  <version>0.0.0</version>
  <description>The sample_ec package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sample_io_rtc</depend>

</package>
