<?xml version="1.0"?>
<package format="2">
  <name>sample_io_rtc</name>
  <version>0.0.0</version>
  <description>The sample_io_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtmbuild</depend>

</package>
